--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "css-loader": "^4.2.1",
     "express": "^4.17.1",
     "mongodb": "^3.6.1",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
